--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,3 @@
 [build]
-functions = "functions"
+functions = "built-lambda" # netlify-lambda builds to this folder AND Netlify reads functions from here
+  publish = "build"
