--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,4 @@
 [build]
-functions = "built-lambda" # netlify-lambda builds to this folder AND Netlify reads functions from here
+command = "npm run build"
+functions = "src/lambda" # netlify-lambda builds to this folder AND Netlify reads functions from here
   publish = "build"
