--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     ]
   },
   "devDependencies": {
-    "npm-run-all": "^4.1.5",
-    "netlify-lambda": "^1.6.3"
+    "netlify-lambda": "^1.6.3",
+    "npm-run-all": "^4.1.5"
   }
 }
