--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
 command = "npm run build"
-functions = "src/lambda" # netlify-lambda builds to this folder AND Netlify reads functions from here
-  publish = "build"
+functions = "./src/lambda" # netlify-lambda builds to this folder AND Netlify reads functions from here
+publish = "build"
