--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "run-p build:**",
-    "build:app": "react-scripts build",
-    "build:lambda": "netlify-lambda build src/lambda",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
