--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.6.1",
+    "@material-ui/icons": "^4.5.1",
+    "@material-ui/pickers": "^3.2.8",
+    "algoliasearch": "^3.35.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-instantsearch-dom": "^6.0.0",
     "react-scripts": "3.2.0"
   },
   "scripts": {
