add 192px.png, and addHomeScreenIcon, appbar flex

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Psalm",
   "icons": [
     {
-      "src": "baseline_queue_music_white_24dp.png",
+      "src": "queueMusic_192px.png",
       "type": "image/png",
       "sizes": "192x192"
     }
